<resources>
    <string name="app_name">乐檬直播</string>
    <string name="retrieve_password">找回密码</string>
    <string name="top_up_recharge">乐票充值</string>
    <string name="user_agreement">用户协议</string>
    <string name="about_us">关于我们</string>
    <string name="my_contribution">我的贡献榜</string>
    <string name="week_ranking">周榜排行榜</string>
    <string name="my_lepiao">我的乐票</string>
    <string name="state_code">国家代码</string>
    <string name="edit_profile">编辑资料</string>
    <string name="change_password">修改密码</string>
    <string name="private_letter">私信</string>
    <string name="agree_term_of_service">登入即代表您同意《服务条款》</string>
    <string name="mobile_terminal">移动端</string>
    <string name="computer_terminal">电脑端</string>
    <string name="service_terminal">服务端</string>
    <string name="web_terminal">网页端</string>
    <string name="is_authorized_to">正在获取授权</string>
    <string name="authorized_failure">授权失败</string>
    <string name="login_failure">登录失败</string>
    <string name="china_phone_code">中国 +86</string>
    <string name="password">密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="password_stand">请输入6至16位密码</string>
    <string name="please_input_code">请输入验证码</string>
    <string name="auth_code">验证码</string>
    <string name="agreement_lemeng">同意乐檬</string>
    <string name="sent_validate">发送验证码</string>
    <string name="attention">关注</string>
    <string name="no_attention">您还没有关注的人哦</string>
    <string name="already_attention">已关注</string>
    <string name="fans">粉丝</string>
    <string name="no_fans">您还没有粉丝哦</string>
    <string name="contribution">贡献榜</string>
    <string name="lepiao">乐票</string>
    <string name="lepiao_live">乐票:</string>
    <string name="my_authentication">我的认证</string>
    <string name="not_authentication">未认证</string>
    <string name="in_authentication">认证中</string>
    <string name="already_authentication">已认证</string>
    <string name="authentication_failure">认证失败</string>
    <string name="my_level">我的等级</string>
    <string name="photo_album">相册</string>
    <string name="small_video">短片</string>
    <string name="look_all">查看全部</string>
    <string name="phone_amount">%1$s张照片</string>
    <string name="small_video_amount">%1$s个短片</string>
    <string name="blacklist">拉黑</string>
    <string name="report">举报</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="camera">相机</string>
    <string name="hint">提示</string>
    <string name="cancel_blacklist">取消拉黑</string>
    <string name="lemeng_id">乐檬号:%1$s</string>
    <string name="default_sign">这个家伙很懒，什么都没留下</string>
    <string name="dssq">低俗色情</string>
    <string name="ljgg">垃圾广告</string>
    <string name="wfxx">违法信息</string>
    <string name="qzpq">欺诈骗钱</string>
    <string name="address">地址</string>
    <string name="contribution_lepiao_num">贡献 %1$s 乐票</string>
    <string name="withdraw_money">已提现金额</string>
    <string name="recharge">充值</string>
    <string name="withdraw">提现</string>
    <string name="alipay_withdraw">支付宝提现</string>
    <string name="can_withdraw_num">可提现金额:</string>
    <string name="withdraw_num">提现金额:</string>
    <string name="alipay_num">支付宝帐号:</string>
    <string name="wait_withdraw">提现时间在72小时之内,请耐心等待</string>
    <string name="please_input_withdraw_num">请输入提现金额</string>
    <string name="please_input_alipay_num">请输入支付宝帐号</string>
    <string name="withdraw_num_must_big_0">提现金额必须大于0</string>
    <string name="withdraw_application_succeed">提现申请成功</string>
    <string name="wechat_withdraw">微信公众号提现</string>
    <string name="if_binding_wechat">绑定微信公众号才能提现,是否绑定</string>
    <string name="binding_succeed">绑定成功</string>
    <string name="search_wechat_withdraw">请搜索微信公众号《乐檬LIVE》进行提现</string>
    <string name="rmb">%1$s元</string>
    <string name="wait_authentication">您的申请已提交,请耐心等待审核</string>
    <string name="real_name">真实姓名</string>
    <string name="please_input_real_name">请输入真实姓名</string>
    <string name="please_input_phone">请输入手机号码</string>
    <string name="id_number">身份证号</string>
    <string name="please_input_id_number">请输入身份证号</string>
    <string name="uploading_id_number">上传证件照片</string>
    <string name="id_number_phone">身份证正面照</string>
    <string name="take_id_number_phone">手持身份证正面照</string>
    <string name="submit_authentication">提交认证</string>
    <string name="select_an_album">选择相册</string>
    <string name="take_pictures">立刻拍照</string>
    <string name="now_level">当前等级</string>
    <string name="what_upgrade">如何提升经验</string>
    <string name="what_upgrade_1">1.送礼时间越长，获得经验越多</string>
    <string name="what_upgrade_2">2.观看时间越长，获得的经验越多</string>
    <string name="what_upgrade_3">3.送礼物是提升等级最快的方式，送的越多升级就越快</string>
    <string name="level_use">等级有何用途</string>
    <string name="level_use_1">1.尊贵图标，凸显身份</string>
    <string name="level_use_2">2.等级越高，排序越前</string>
    <string name="level_use_3">3.更多特权，敬请期待</string>
    <string name="level">Lv.%1$s</string>
    <string name="my_empirical_value">我的经验值:%1$s</string>
    <string name="upgrade_need_empirical_value">升级还需经验值:%1$s</string>
    <string name="save">保存</string>
    <string name="constellation">星 座</string>
    <string name="location">所在地</string>
    <string name="input_signature">请输入您的签名</string>
    <string name="select_location">选择地区</string>
    <string name="look_male">看男神</string>
    <string name="look_female">看女神</string>
    <string name="looks_all">看全部</string>
    <string name="avatar_setting">设为头像</string>
    <string name="picture_delete">删除图片</string>
    <string name="lemeng_account">账户</string>
    <string name="lemeng_id_tv">乐檬号</string>
    <string name="copy">复制</string>
    <string name="account_and_security">账号与安全</string>
    <string name="my_field_control">我的场控</string>
    <string name="cancel_field_control">取消场控</string>
    <string name="set_field_control">设置场控</string>
    <string name="clear_cache">清理缓存</string>
    <string name="user_feedback">用户反馈</string>
    <string name="log_out">退出登录</string>
    <string name="if_log_out">是否退出登录</string>
    <string name="if_clear_cache">是否清除缓存</string>
    <string name="old_password">旧密码</string>
    <string name="old_password_hint">请输入旧密码</string>
    <string name="new_password">新密码</string>
    <string name="new_password_hint">请输入新密码</string>
    <string name="again_new_password">重复密码</string>
    <string name="again_new_password_hint">请再次输入新密码</string>
    <string name="old_password_failure">旧密码输入不正确</string>
    <string name="password_different_twice">两次输入的密码不一致</string>
    <string name="new_and_old_password_must_different">新密码不能与旧密码相同</string>
    <string name="share_live_title">主播%1$s邀你玩游戏啦</string>
    <string name="share_live_content">够刺激,主播%1$s带你玩转直播间,一起游戏嗨起来!</string>
    <string name="share_download_title">乐檬直播,共享世界的快乐</string>
    <string name="share_download_content">万人直播室嗨翻天!超火人气,边撩妹纸边玩游戏,赶紧加入吧!</string>
    <string name="live">直播</string>
    <string name="if_close_live">是否关闭直播</string>
    <string name="video">视频</string>
    <string name="newest">最新</string>
    <string name="hot">热门</string>
    <string name="some_people_in_look">%1$s 在看</string>
    <string name="trend_frame">走势图</string>
    <string name="history_frame">历史投注</string>
    <string name="rule_frame">规则</string>
    <string name="bet">投注</string>
    <string name="record">记录</string>
    <string name="trend">走势</string>
    <string name="invite_the_mic">邀请连麦</string>
    <string name="over_the_mic">结束连麦</string>
    <string name="the_mic_succeed">连麦成功</string>
    <string name="double_hit">连击</string>
    <string name="no_control">您暂时没有场控</string>
    <string name="audience_break_the_mic">观众断开连麦</string>
    <string name="anchor_break_the_mic">主播断开连麦</string>
    <string name="turn_down_the_mic">%1$s拒绝了您的连麦请求</string>
    <string name="no_accept_the_mic">%1$s没有接受您的连麦请求</string>
    <string name="chat_room_kickout_event">被踢出聊天室，原因:%1$s</string>
    <string name="no_selecte_mic">没有选择连麦的粉丝</string>
    <string name="waiting">等待中%1$ss</string>
    <string name="banned_to_post">禁言</string>
    <string name="banned_to_post_succeed">禁言成功</string>
    <string name="remove_banned">解除禁言</string>
    <string name="remove_banned_succeed">解除禁言成功</string>
    <string name="deny">%1$s被禁言</string>
    <string name="remove_deny">%1$s被解除禁言</string>
    <string name="is_deny">您被禁言中,禁止发言</string>
    <string name="send_out">送出</string>
    <string name="receive">收到</string>
    <string name="add_attention">+ 关注</string>
    <string name="he">TA</string>
    <string name="homepage">主页</string>
    <string name="reply">回复%1$s:</string>
    <string name="intput_report_content">请输入举报内容</string>
    <string name="face">美颜</string>
    <string name="refreshingly">粉嫩</string>
    <string name="blond">白皙</string>
    <string name="ruddy">红润</string>
    <string name="skin">美肤</string>
    <string name="live_is_close">提示\n\n该直播间已关闭,请返回主页</string>
    <string name="give_gifts">赠送了1个%1$s</string>
    <string name="no_play_game">主播未开启游戏</string>
    <string name="give">赠送</string>
    <string name="focus_on_the_anchor">关注了主播</string>
    <string name="create_room_success">创建房间成功</string>
    <string name="join_room">进入房间</string>
    <string name="light_up">点亮了</string>
    <string name="anchor_come_back">主播回来啦, 视频即将恢复</string>
    <string name="anchor_leave">主播离开一下, 精彩不中断, 不要走开哦</string>
    <string name="write_a_title_for_the_live">给直播写一个标题吧</string>
    <string name="start_live">开始直播</string>
    <string name="spark">火星</string>
    <string name="if_start_live">当前为移动网络,是否开启直播</string>
    <string name="if_look_live">当前为移动网络,是否继续观看</string>
    <string name="live_already_end">直播已结束</string>
    <string name="live_performance">本场直播成就</string>
    <string name="this_time">本次时长</string>
    <string name="the_total_time">累计时长</string>
    <string name="views_number">观看人数</string>
    <string name="the_new_fan">新增粉丝</string>
    <string name="obtain_lepiao">获得乐票</string>
    <string name="add_up_lepiao">累计乐票</string>
    <string name="quit_live">退出直播间</string>
    <string name="live_end">·  直播结束  ·</string>
    <string name="check_the_home_page">查看主页</string>
    <string name="back_homepage">返回首页</string>
    <string name="request_a_song">点歌</string>
    <string name="input_song_name">请输入歌曲名称</string>
    <string name="pause">暂停</string>
    <string name="go_on">继续</string>
    <string name="play">播放</string>
    <string name="download">下载</string>
    <string name="download_finish">下载完成</string>
    <string name="save_failure">存储失败</string>
    <string name="if_delete_the_song">确定要删除此歌曲吗?</string>
    <string name="is_playing_no_delete">此歌曲正在播放,不能删除</string>
    <string name="is_go_on_no_delete">此歌曲正在暂停,不能删除</string>
    <string name="no_download">此歌曲还没有下载</string>
    <string name="no_songs_were_found">没有搜索到歌曲</string>
    <string name="no_info_try_again_later">没有开奖信息,请稍候再试</string>
    <string name="intput_lucky_bet">最低:10 最高:1600000</string>
    <string name="start_lucy28_game">主播开启幸运28游戏</string>
    <string name="big">大</string>
    <string name="samll">小</string>
    <string name="singe">单</string>
    <string name="double_">双</string>
    <string name="big_sigle">大单</string>
    <string name="samll_singe">小单</string>
    <string name="big_double">大双</string>
    <string name="samll_double">小双</string>
    <string name="more_big">极大</string>
    <string name="more_samll">极小</string>
    <string name="other">其他</string>
    <string name="phone_number">手机号码</string>
    <string name="bind_self_bank_card">请绑定持卡人本人银行卡</string>
    <string name="cardholder">持卡人</string>
    <string name="input_cardholder_name">请输入持卡人姓名</string>
    <string name="credit_card_numbers">银行卡号</string>
    <string name="input_credit_card_numbers">请输入银行卡号</string>
    <string name="card_type">卡类型</string>
    <string name="input_card_type">请输入卡类型(如:中国银行)</string>
    <string name="bank_address">开户行地址</string>
    <string name="input_bank_address">请输入开户行地址</string>
</resources>